Minor refactor in KeyManagementScreen.